--- a/orders/templates/orders/order_detail.html
+++ b/orders/templates/orders/order_detail.html
@@ -612,15 +612,27 @@
                         {% endif %}
                         <tr>
                             <th>المبلغ الإجمالي</th>
-                            <td>{{ order.total_amount }} {{ currency_symbol }}</td>
+                            <td>
+                                {% if computed_total_amount is not None %}
+                                    {{ computed_total_amount|clean_decimal_currency:currency_symbol }}
+                                {% else %}
+                                    {{ order.total_amount|clean_decimal_currency:currency_symbol }}
+                                {% endif %}
+                            </td>
                         </tr>
                         <tr>
                             <th>المبلغ المدفوع</th>
-                            <td>{{ order.paid_amount }} {{ currency_symbol }}</td>
+                            <td>{{ order.paid_amount|clean_decimal_currency:currency_symbol }}</td>
                         </tr>
                         <tr>
                             <th>المبلغ المتبقي</th>
-                            <td>{{ order.remaining_amount }} {{ currency_symbol }}</td>
+                            <td>
+                                {% if computed_remaining_amount is not None %}
+                                    {{ computed_remaining_amount|clean_decimal_currency:currency_symbol }}
+                                {% else %}
+                                    {{ order.remaining_amount|clean_decimal_currency:currency_symbol }}
+                                {% endif %}
+                            </td>
                         </tr>
                         <tr>
                             <th>تم الإنشاء بواسطة</th>
@@ -1150,17 +1162,35 @@
                     <tfoot>
                         <tr class="table-light">
                             <th colspan="4" class="text-start">المجموع قبل الخصم</th>
-                            <th colspan="2">{{ order.total_amount|clean_decimal_currency:currency_symbol }}</th>
+                            <th colspan="2">
+                                {% if computed_total_amount is not None %}
+                                    {{ computed_total_amount|clean_decimal_currency:currency_symbol }}
+                                {% else %}
+                                    {{ order.total_amount|clean_decimal_currency:currency_symbol }}
+                                {% endif %}
+                            </th>
                             <td></td>
                         </tr>
                         <tr class="table-warning">
                             <th colspan="4" class="text-start">إجمالي الخصم</th>
-                            <th colspan="2">{{ order.total_discount_amount|clean_decimal_currency:currency_symbol }}</th>
+                            <th colspan="2">
+                                {% if computed_total_discount_amount is not None %}
+                                    {{ computed_total_discount_amount|clean_decimal_currency:currency_symbol }}
+                                {% else %}
+                                    {{ order.total_discount_amount|clean_decimal_currency:currency_symbol }}
+                                {% endif %}
+                            </th>
                             <td></td>
                         </tr>
                         <tr class="table-success">
                             <th colspan="4" class="text-start">الإجمالي النهائي بعد الخصم</th>
-                            <th colspan="2">{{ order.final_price_after_discount|clean_decimal_currency:currency_symbol }}</th>
+                            <th colspan="2">
+                                {% if computed_final_price_after_discount is not None %}
+                                    {{ computed_final_price_after_discount|clean_decimal_currency:currency_symbol }}
+                                {% else %}
+                                    {{ order.final_price_after_discount|clean_decimal_currency:currency_symbol }}
+                                {% endif %}
+                            </th>
                             <td></td>
                         </tr>
                     </tfoot>
